--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -10,10 +10,29 @@
         }
     </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class = "heading">DOM learning from youtube</h1>
+<body class="bg-black">
+    <div>
+        <h1 id = "title" class = "heading">DOM learning from youtube</h1>
         <p>Lorem ipsum dolor sit amet.</p>
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
+        <h2 class="heading2"> This is password </h2>
+        <input type="password">
+
     </div>
 </body>
 </html>
+
+
+<!-- 
+1.innerHTML: returns all html nodes 
+2.textContent : returns all text content
+3.innerText : gives the text in the selected node
+4.querySelector
+5.querySelectorAll
+6.getAttribute
+7.setAttribute
+ -->
