--- a/07_projects/02_bmi_calculator/index.html
+++ b/07_projects/02_bmi_calculator/index.html
@@ -18,6 +18,7 @@
                 <div id="final">Results:
                     <div id="results"></div>
                 </div>
+                <div id="msg"></div>
                 <div id="weight-guide">
                   <h3>BMI Weight Guide</h3>
                   <p>Under Weight = Less than 18.6</p>
